# whetstone

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  README.txt
.github/workflows/: ci.yml
benchmarks/: generate.py  run.py
scripts/: fmt.sh
src/: analyze.cpp  clause.hpp  clause_db.cpp  dimacs.cpp  dimacs.hpp  ema.hpp  main.cpp  preprocess.cpp  proof.hpp  propagate.cpp  search.cpp  solver.cpp  solver.hpp  types.hpp  vsids.cpp
tests/: test_solver.cpp
